@@ -1,3 +1,5 @@
+  - travis ci 에서 docker image 를 build
+
 v0.5.2    Wed, 14 Mar 2018 23:45:14 +0900
   - 의류 등록 오류를 제대로 표시하도록 수정 (#106)
 
